# compare-notebook-dir

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  ruff.toml
src/compare_notebook_dir/: __init__.py  __main__.py  logging.py
